nicodive-api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nicodiveapi
  labels:
    run: nicodiveapi
spec:
  replicas: 3
  template:
    metadata:
      labels:
        run: nicodiveapi
    spec:
      containers:
      - name: nicodiveapi
        image: famasoon/nicodiveapi:latest
        ports:
        - containerPort: 8080
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
