nicodive-front.yml
apiVersion: v1
kind: Service
metadata:
  name: nicodivefront
  labels:
    run: nicodivefront
spec:
  selector:
    run: nicodivefront
  ports:
  - name: http
    port: 3000
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nicodivefront
  labels:
    name: nicodivefront
spec:
  replicas: 3
  selector:
    matchLabels:
      run: nicodivefront
  template:
    metadata:
      labels:
        run: nicodivefront
    spec:
      containers:
      - name: nicodivefront
        image: famasoon/nicodivefront:latest
        ports:
        - containerPort: 3000
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
